--- a/pages/cart.html
+++ b/pages/cart.html
@@ -189,6 +189,7 @@
                 </div>
 
                 <div id="qr-section" class="qr-section">
+                    <p style="margin-bottom: 20px;"><strong>Chủ tài khoản: </strong><i>NGUYỄN ĐỨC VŨ</i></p>
                     <img src="../assets/images/NguyenDucVu_241230896/payment_qr.png" alt="QR chuyển khoản">
                 </div>
 
