--- a/pages/product.html
+++ b/pages/product.html
@@ -142,7 +142,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="comment-section">
+                <div class="comment-section" id="cmt-section">
                     <h2>Bình luận</h2>
                     <hr>
                     <div class="cmt">
@@ -277,6 +277,7 @@
                 </div>
 
                 <div id="qr-section" class="qr-section">
+                    <p style="margin-bottom: 20px;"><strong>Chủ tài khoản: </strong><i>NGUYỄN ĐỨC VŨ</i></p>
                     <img src="../assets/images/NguyenDucVu_241230896/payment_qr.png" alt="QR chuyển khoản">
                 </div>
 
