add: more product

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </form>
         </div>
         <div class="cart-icon">
-          <a href="./pages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+          <a href="./pages/cart.html"><i class="fa-solid fa-cart-shopping"></i> Giỏ hàng</a>
         </div>
         <div class="login-icon">
           <a href="">
@@ -183,7 +183,7 @@
                 alt="" class="item-image" />
               <h3 class="item-name">iPad Pro M5 11 inch</h3>
               <p class="item-price">29.999.000đ</p>
-              <a href="./pages/product.html?id="><button>Chi tiết</button></a>
+              <a href="./pages/product.html?id=ipad-pro-m5-11inch"><button>Chi tiết</button></a>
             </div>
             <div class="itembox">
               <div class="product-tag">
@@ -194,7 +194,7 @@
                 alt="" class="item-image" />
               <h3 class="item-name">iPad Pro M5 13 inch</h3>
               <p class="item-price">39.999.000đ</p>
-              <a href="./pages/product.html?id="><button>Chi tiết</button></a>
+              <a href="./pages/product.html?id=ipad-pro-m5-13inch"><button>Chi tiết</button></a>
             </div>
             <div class="itembox">
               <div class="product-tag">
@@ -205,7 +205,7 @@
                 alt="" class="item-image" />
               <h3 class="item-name">iPad Pro M4 13 inch</h3>
               <p class="item-price">33.690.000đ</p>
-              <a href="./pages/product.html?id="><button>Chi tiết</button></a>
+              <a href="./pages/product.html?id=ipad-pro-m4"><button>Chi tiết</button></a>
             </div>
             <div class="itembox">
               <div class="product-tag">
@@ -216,7 +216,7 @@
                 alt="" class="item-image" />
               <h3 class="item-name">iPad Air M3 13 inch</h3>
               <p class="item-price">22.990.000đ</p>
-              <a href="./pages/product.html?id="><button>Chi tiết</button></a>
+              <a href="./pages/product.html?id=ipad-air-m3"><button>Chi tiết</button></a>
             </div>
           </div>
           <a href="./pages/iPad.html" class="show-all-btn">Xem thêm iPad</a>
@@ -233,7 +233,7 @@
                 alt="" class="item-image" />
               <h3 class="item-name">Mac Pro M5 14 inch</h3>
               <p class="item-price">41.999.000đ</p>
-              <a href="./pages/product.html?id="><button>Chi tiết</button></a>
+              <a href="./pages/product.html?id=mac-pro-m5-14inch"><button>Chi tiết</button></a>
             </div>
             <div class="itembox">
               <div class="product-tag">
