--- a/pages/Mac.html
+++ b/pages/Mac.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../styles/NguyenDucVu_241230896/carousel_banner.css" />
   <link rel="stylesheet" href="../styles/NguyenDucVu_241230896/main_content.css" />
   <link rel="stylesheet" href="../styles/NguyenKimTuyen_241230888/product.css" />
+  <link rel="stylesheet" href="../styles/LeQuyTung_241230886/fix-products.css">
   <script src="https://kit.fontawesome.com/9e100b4052.js" crossorigin="anonymous"></script>
   <script src="../js/header_and_footer.js" defer></script>
   <script src="../js/carousel_banner.js" defer></script>
@@ -31,7 +32,7 @@
           </form>
         </div>
         <div class="cart-icon">
-          <a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+          <a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i> giỏ hàng</a>
         </div>
         <div class="login-icon">
           <a href="">
@@ -135,7 +136,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="./product.html?id=">
+              <a href="./product.html?id=mac-pro-m5-14inch">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/MacBook Pro M5/0051653_macbook-pro-14-inch-m5-2025-10-core-gpu-10-core-cpu-16gb-ram-512gb-ssd_240.png"
@@ -161,7 +162,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/moi_mo_ban_2.png" alt="image" />
               </div>
 
-              <a href="./product.html?id=">
+              <a href="./product.html?id=mac-air-m4-13inch-256GB">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/MacBook Air M4/0036014_macbook-air-m4-13-inch-8-core-gpu-16gb-ram-256gb-ssd_240.jpeg"
@@ -186,7 +187,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/nhan-tin.png" alt="image" />
               </div>
 
-              <a href="./product.html?id=">
+              <a href="./product.html?id=mac-air-m4-13inch-512GB">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/MacBook Air M4/0036014_macbook-air-m4-13-inch-8-core-gpu-16gb-ram-256gb-ssd_240.jpeg"
@@ -211,7 +212,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/nhan-tin.png" alt="image" />
               </div>
 
-              <a href="./product.html?id=">
+              <a href="./product.html?id=mac-air-m4-13inch-24r-512GB">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/MacBook Air M4/0036014_macbook-air-m4-13-inch-8-core-gpu-16gb-ram-256gb-ssd_240.jpeg"
