--- a/pages/cart.html
+++ b/pages/cart.html
@@ -27,7 +27,7 @@
                             placeholder="Bạn muốn tìm gì..."></form>
                 </div>
                 <div class="cart-icon">
-                    <a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i> giỏ hàng</a>
                 </div>
                 <div class="login-icon">
                     <a href="">
