--- a/pages/iphone.html
+++ b/pages/iphone.html
@@ -32,7 +32,7 @@
                     </form>
                 </div>
                 <div class="cart-icon">
-                    <a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i> giỏ hàng</a>
                 </div>
                 <div class="login-icon">
                     <a href="">
